{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 180,
  "lineage": "b178e7ad-f63b-89d0-575e-96f5ddb5a294",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825765400631:internet-gateway/igw-09d9246afc0ae775b",
            "id": "igw-09d9246afc0ae775b",
            "owner_id": "825765400631",
            "tags": {
              "Name": "igw vpc virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "igw vpc virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Nazareno"
            },
            "vpc_id": "vpc-05c62459cfc639856"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825765400631:route-table/rtb-058a108b66e39b8c5",
            "id": "rtb-058a108b66e39b8c5",
            "owner_id": "825765400631",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d9246afc0ae775b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public crt"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "public crt",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Nazareno"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c62459cfc639856"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079c05e5bbec56b4c",
            "route_table_id": "rtb-058a108b66e39b8c5",
            "subnet_id": "subnet-0b75cee79f5636afa"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825765400631:security-group/sg-040c33f5b94e60df2",
            "description": "Allow SSH inbound traffic and ALL egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040c33f5b94e60df2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH over Internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Public Instance SG",
            "name_prefix": "",
            "owner_id": "825765400631",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Instance SG"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "Public Instance SG",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Nazareno"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c62459cfc639856"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825765400631:subnet/subnet-0b0057a745bb38fa2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0057a745bb38fa2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825765400631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "private_subnet_1",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Nazareno"
            },
            "vpc_id": "vpc-05c62459cfc639856"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825765400631:subnet/subnet-0b75cee79f5636afa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b75cee79f5636afa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "825765400631",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "public_subnet",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Nazareno"
            },
            "vpc_id": "vpc-05c62459cfc639856"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825765400631:vpc/vpc-05c62459cfc639856",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-09abecfd881370b75",
            "default_route_table_id": "rtb-0a6e1c101aca6c9cf",
            "default_security_group_id": "sg-01015bf26e8caef91",
            "dhcp_options_id": "dopt-0bf55d22ce621e26d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05c62459cfc639856",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a6e1c101aca6c9cf",
            "owner_id": "825765400631",
            "tags": {
              "Name": "vpc_virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.3.6",
              "Name": "vpc_virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Nazareno"
            }
          }
        }
      ]
    }
  ]
}